auto_deploy_poc/k8s-resources/istio_destination_rule_tg-1.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  labels:
    applicable-for: eric-ccrc.eric-ccpc.eric-cces.eric-ccdm
  name: eric-${TG_NAME}-framework-dr
spec:
  host: ${TG_HOST}
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 4443
      tls:
        caCertificates: ${CA_CERT}
        clientCertificate: ${CLIENT_CRT}
        mode: MUTUAL
        privateKey: ${CLIENT_KEY}
    - port:
        number: 8443
      tls:
        caCertificates: ${CA_CERT}
        clientCertificate: ${CLIENT_CRT}
        mode: MUTUAL
        privateKey: ${CLIENT_KEY}
