auto_deploy_poc/k8s-resources/network_policy_template.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ${ns}-allow-${app}
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ${app}
  policyTypes:
  - Ingress
